PyMaker/datas/object2/RawHTML/i3101/Python_DOC_referPages.from-pandas-schema-import-column-schema-error.txt
<div class="post-text" itemprop="text">
<p>I'm running <code>python 2.7</code> and trying to get program working with <code>pandas</code>.  The following error message is received when importing Column.  Looks like it might be an issue with the :-</p>
<pre><code>def __init__(self, name: str, validations: typing.Iterable['validation._BaseValidation'] = [], allow_empty=False):
</code></pre>
<p>Error Message:</p>
<blockquote>
<p>File
  "/Users/coxda/faDataValidation27/lib/python2.7/site-packages/pandas_schema/column.py",
  line 8
      def <strong>init</strong>(self, name: str, validations: typing.Iterable['validation._BaseValidation'] = [],
  allow_empty=False):
                             ^ SyntaxError: invalid syntax</p>
</blockquote>
</div>
<div class="post-text" itemprop="text">
<p>The syntax error is because the package uses Python 3.5's type annotation: <a href="https://docs.python.org/3/library/typing.html" rel="nofollow noreferrer">https://docs.python.org/3/library/typing.html</a></p>
<p>The package documentation does not specifically mention Python 3 is required, but the syntax it uses suggests Python 3.5+ is required, or, since the package is in pure python, you could edit the <code>column.py</code> source and should be able to remove those type annotations and then successfully import the classes. </p>
<p>Reference: <a href="https://stackoverflow.com/questions/41648300/what-is-the-colon-inside-the-parameter-mean-in-python">What is the colon inside the parameter mean in python? [duplicate]</a></p>
</div>
<span class="comment-copy">Thanks.  Yes it is working when I run with Python 3.6.5.  Looks like a documentation error since it doesn't work on 2.7</span>
